Memory Leakage fixed on PDS_client_server_v1 Project + NetworkingData class added on CLion/Notepad Project

--- a/Notepad_Project/CLion/notepad/CMakeLists.txt
+++ b/Notepad_Project/CLion/notepad/CMakeLists.txt
@@ -34,14 +34,16 @@ set(SOURCE_FILES
         src/Symbol.cpp
         src/Message.cpp
         src/Request.cpp
-        src/StartDialog.cpp)
+        src/StartDialog.cpp
+        src/NetworkingData.cpp)
 
 set(INCLUDE_FILES
         include/Notepad.h
         include/Symbol.h
         include/Message.h
         include/Request.h
-        include/StartDialog.h)
+        include/StartDialog.h
+        include/NetworkingData.h)
 
 set(RESOURCE_FILES
         notepad.qrc)
