Adding some folders.

--- a/PDS_client_server_v2/PDS_Server/CMakeLists.txt
+++ b/PDS_client_server_v2/PDS_Server/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.1.0)
 project(PDS_Server)
 
 if (CMAKE_VERSION VERSION_LESS "3.7.0")
@@ -9,6 +9,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
+
+include_directories(${PROJECT_SOURCE_DIR}/include)
 
 find_package(Qt5Core REQUIRED)
 find_package(Qt5Gui REQUIRED)
@@ -22,17 +24,23 @@ list(APPEND LIBRARIES
         Qt5::Network)
 list(REMOVE_DUPLICATES LIBRARIES)
 
+set(SOURCE_FILES
+        src/main.cpp
+        src/Symbol.cpp
+        src/Message.cpp
+        src/Request.cpp
+        src/NetworkServer.cpp
+        src/SharedEditor.cpp)
+
+set(INCLUDE_FILES
+        include/Symbol.h
+        include/Message.h
+        include/Request.h
+        include/NetworkServer.h
+        include/SharedEditor.h)
+
 add_executable(PDS_Server
-        main.cpp
-        NetworkServer.cpp
-        NetworkServer.h
-        Message.cpp
-        Message.h
-        Symbol.cpp
-        Symbol.h
-        Request.cpp
-        Request.h
-        SharedEditor.cpp
-        SharedEditor.h)
+        ${INCLUDE_FILES}
+        ${SOURCE_FILES})
 
 target_link_libraries(PDS_Server ${LIBRARIES})
