--- a/PDS_client_server_v3/PDS_Server/CMakeLists.txt
+++ b/PDS_client_server_v3/PDS_Server/CMakeLists.txt
@@ -16,12 +16,14 @@ find_package(Qt5Core REQUIRED)
 find_package(Qt5Gui REQUIRED)
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Network REQUIRED)
+find_package(Qt5Sql REQUIRED)
 
 list(APPEND LIBRARIES
         Qt5::Core
         Qt5::Gui
         Qt5::Widgets
-        Qt5::Network)
+        Qt5::Network
+        Qt5::Sql)
 list(REMOVE_DUPLICATES LIBRARIES)
 
 set(SOURCE_FILES
