Upload of profile pic to Server.

--- a/PDS_client_server_v3/PDS_Notepad_Client/CMakeLists.txt
+++ b/PDS_client_server_v3/PDS_Notepad_Client/CMakeLists.txt
@@ -51,7 +51,8 @@ set(INCLUDE_FILES
         include/SignUpDialog.h
         include/Response.h
         include/DocumentsModel.h
-        include/SharedDocumentsExplorer.h)
+        include/SharedDocumentsExplorer.h
+        include/SerialSize.h)
 
 set(RESOURCE_FILES
         notepad.qrc)
